# esp-humidity-controller

./: CMakeLists.txt  Makefile  README.md  partitions.csv
components/DHT22/: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  humidity_controller.c  relay.c  relay.h  rest_server.c  rest_server.h  settings.c  settings.h  wifi.c  wifi.h
webclient/: Dockerfile  docker-compose.yml  nginx.conf  package.json  vue.config.js
webclient/src/: App.vue  main.js  service.js
webclient/src/components/: Main.vue  Settings.vue  settings.form.vue
webclient/src/scss/: App.scss  theme.scss
